# hscode_info

./: README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
admin/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_feed_created.py
manager/: admin.py  models.py  serializers.py  urls.py  views.py
manager/migrations/: 0001_initial.py
my-info-web/: package-lock.json  package.json  webpack.config.js
my-info-web/public/: index.html
my-info-web/src/: App.js  RestAPI.js  index.js  styles.css
my-info-web/src/components/: BG.js  linked_icons.js  ppt_icons.js  tech_icons.js
my-info-web/src/components/container/: Circles.js  FullWidth.js  ItsMe.js  ItsMeBg.js  home.js  icons.js  itsme.module.css  linked_in.js  linked_in.module.css  portfolio.js  portfolio.module.css  profile.js  profile.module.css
my-info-web/src/components/footer/: footer.js  footer.module.css
my-info-web/src/components/header/: nav.js  nav.module.css
my-info-web/src/components/modal/: feed_modal.js  login_modal.js  login_modal.module.css  modal.js  modal.module.css
my-info-web/src/data/: request_post.js  slack_bot.js
my-info-web/src/validator/: request_validate.js
my-info-web/src/view/: PptView.js
ppts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ppts/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_created.py
users/utils/: discord_bot.py
